--- a/app/views/users/follower.html.erb
+++ b/app/views/users/follower.html.erb
@@ -25,5 +25,7 @@
       </div>
     </div>
   <% end %>
-    <%== pagy_bootstrap_nav(@pagy) %>
+    <div class="pagy_position">
+      <%== pagy_bootstrap_nav(@pagy) %>
+    </div>
 <% end %>
