--- a/app/assets/stylesheets/commonsetting.scss
+++ b/app/assets/stylesheets/commonsetting.scss
@@ -169,7 +169,7 @@ body.noscroll {
 .avatar {
   border-radius: 50%;
   border: solid 1px white;
-  background-color: rgb(246, 238, 238);
+  background-color: rgb(193, 212, 255)
 }
 
 @mixin avatar_face {
