--- a/app/views/users/curious.html.erb
+++ b/app/views/users/curious.html.erb
@@ -1,5 +1,4 @@
 <% provide(:title, "curious") %>
-<h1>気になる質問</h1>
 
 <div class="sum_question_article">
   <div>Curious question count / <%= @user.sum_curious_per_user.count %></div>
@@ -7,31 +6,36 @@
 <div class="personal_question_article_list">
   <% if @user.sum_curious_per_user.any? %>
     <% @curiouses.each do |curious| %>
-      <div class="an_item interspace_items">
-        <div>
-          <%= link_to curious.title, browsing_question_path(curious) %>
-        </div>
-        <div class="flex">
-          <div>文章の正しさ:<%= curious.accuracy_text %>&ensp;/&ensp;</div>
-          <div>文章難易度:<%= curious.difficultylevel_text %>&ensp;/&ensp;</div>
-          <div>最終修正日:<%= curious.updated_at %></div>
-        </div>
-        <div class="flex">
-          <div>小学生向け:<%= ApplicationRecord.inspect_level(curious.Eschool_level) %>&ensp;/&ensp;</div>
-          <div>中学生向け:<%= ApplicationRecord.inspect_level(curious.JHschool_level) %>&ensp;/&ensp;</div>
-          <div>高校生向け:<%= ApplicationRecord.inspect_level(curious.Hschool_level) %></div>
-        </div>
-        <div class="separation"></div>
-        <div>
-          <%= form_with(model: current_user.curious_questions.find_by(question_id: curious.id),
-            html: {method: :delete }, local: true) do |f| %>
-            <div><%= hidden_field_tag :not_ajax, true %></div>
-            <%= f.submit "「気になる」取り消し", class: "" %>
-          <% end %>
+      <div class="an_item">
+        <div class="content">
+          <div class="title">
+            <%= link_to curious.title, browsing_question_path(curious) %>
+          </div>
+          <div class="flex">
+            <div class="flex_item_adjustment">文章の正しさ&thinsp;/&thinsp;<%= curious.accuracy_text %></div>
+            <div class="flex_item_adjustment">文章難易度&thinsp;/&thinsp;<%= curious.difficultylevel_text %></div>
+            <div>最終修正日&thinsp;/&thinsp;<%= ApplicationRecord.date_expression_change(curious.updated_at) %></div>
+          </div>
+          <div class="flex">
+            <div class="flex_item_adjustment">小学生向け&thinsp;/&thinsp;<%= ApplicationRecord.inspect_level(curious.Eschool_level) %></div>
+            <div class="flex_item_adjustment">中学生向け&thinsp;/&thinsp;<%= ApplicationRecord.inspect_level(curious.JHschool_level) %></div>
+            <div>高校生向け&thinsp;/&thinsp;<%= ApplicationRecord.inspect_level(curious.Hschool_level) %></div>
+          </div>
+          <div class="separation"></div>
+          <div>
+            <%= form_with(model: current_user.curious_questions.find_by(question_id: curious.id),
+              html: {method: :delete }, local: true) do |f| %>
+              <div><%= hidden_field_tag :not_ajax, true %></div>
+              <%= f.submit "「気になる」取り消し", class: "delete_button_design" %>
+            <% end %>
+          </div>
         </div>
       </div>
+      <div class="distinction_line"></div>
     <% end %>
-    <%== pagy_bootstrap_nav(@pagy) %>
+    <div class="pagenation">
+      <%== pagy_bootstrap_nav(@pagy) %>
+    </div>
   <% else %>
     <strong>気になる質問がありません</strong>
   <% end %>
