--- a/app/views/users/following.html.erb
+++ b/app/views/users/following.html.erb
@@ -26,5 +26,7 @@
       </div>
     </div>
   <% end %>
-    <%== pagy_bootstrap_nav(@pagy) %>
+    <div class="pagy_position">
+      <%== pagy_bootstrap_nav(@pagy) %>
+    </div>
 <% end %>
