--- a/app/views/users/nice.html.erb
+++ b/app/views/users/nice.html.erb
@@ -1,5 +1,4 @@
 <% provide(:title, "nice") %>
-<h1>お気に入りの記事</h1>
 
 <div class="sum_question_article">
   <div>Nice article count / <%= @user.sum_nice_per_user.count %></div>
@@ -7,31 +6,35 @@
 <div class="personal_question_article_list">
   <% if @user.sum_nice_per_user.any? %>
     <% @nices.each do |nice| %>
-      <div class="an_item interspace_items">
-        <div>
-          <%= link_to nice.title, browsing_article_path(nice) %>
-        </div>
-        <div class="flex">
-          <div>文章の正しさ:<%= nice.accuracy_text %>&ensp;/&ensp;</div>
-          <div>文章難易度:<%= nice.difficultylevel_text %>&ensp;/&ensp;</div>
-          <div>最終修正日:<%= nice.updated_at %></div>
-        </div>
-        <div class="flex">
-          <div>小学生向け:<%= ApplicationRecord.inspect_level(nice.Eschool_level) %>&ensp;/&ensp;</div>
-          <div>中学生向け:<%= ApplicationRecord.inspect_level(nice.JHschool_level) %>&ensp;/&ensp;</div>
-          <div>高校生向け:<%= ApplicationRecord.inspect_level(nice.Hschool_level) %></div>
-        </div>
-        <div class="separation"></div>
-        <div>
-          <%= form_with(model: current_user.nice_to_articles.find_by(article_id: nice.id),
-            html: {method: :delete }, local: true) do |f| %>
-            <div><%= hidden_field_tag :not_ajax, true %></div>
-            <%= f.submit "nice取り消し", class: "" %>
-          <% end %>
+      <div class="an_item">
+        <div class="content">
+          <div class="title">
+            <%= link_to nice.title, browsing_article_path(nice) %>
+          </div>
+          <div class="flex">
+            <div class="flex_item_adjustment">文章の正しさ&thinsp;/&thinsp;<%= nice.accuracy_text %></div>
+            <div class="flex_item_adjustment">文章難易度&thinsp;/&thinsp;<%= nice.difficultylevel_text %></div>
+            <div>最終修正日&thinsp;/&thinsp;<%= ApplicationRecord.date_expression_change(nice.updated_at) %></div>
+          </div>
+          <div class="flex">
+            <div class="flex_item_adjustment">小学生向け&thinsp;/&thinsp;<%= ApplicationRecord.inspect_level(nice.Eschool_level) %></div>
+            <div class="flex_item_adjustment">中学生向け&thinsp;/&thinsp;<%= ApplicationRecord.inspect_level(nice.JHschool_level) %></div>
+            <div>高校生向け&thinsp;/&thinsp;<%= ApplicationRecord.inspect_level(nice.Hschool_level) %></div>
+          </div>
+          <div>
+            <%= form_with(model: current_user.nice_to_articles.find_by(article_id: nice.id),
+              html: {method: :delete }, local: true) do |f| %>
+              <div><%= hidden_field_tag :not_ajax, true %></div>
+              <%= f.submit "nice取り消し", class: "delete_button_design" %>
+            <% end %>
+          </div>
         </div>
       </div>
+      <div class="distinction_line"></div>
     <% end %>
-    <%== pagy_bootstrap_nav(@pagy) %>
+    <div class="pagenation">
+      <%== pagy_bootstrap_nav(@pagy) %>
+    </div>
   <% else %>
     <strong>まだniceボタンを押していません</strong>
   <% end %>
